# kagayaki

./: .gitattributes  Algorithms.cuh  CMakeLists.txt  ConstructBVH.cuh  Disney_BRDF.cuh  Disney_BRDF_sampling.cuh  IO_load_WavefrontObj.cuh  IO_load_images.cuh  IO_save_png.cuh  ImageBasedLighting.cuh  LambertBRDF_sampling.cuh  NextEventEstimation.cuh  NextEventEstimation_FaceLight.cuh  NextEventEstimation_HDR.cuh  NextEventEstimation_PathTracing.cuh  README.md  RayTrace.cuh  RayTrace_Russian_Roulette.cuh  SVGF.cuh  global_values.cuh  host_to_device.cuh  main.cu  matrix.cuh  render.cuh  render_prepare.cuh  sampling.cuh  scene.cuh  struct_BVH_node.cuh  struct_Camera.cuh  struct_HitPoint.cuh  struct_Intersection.cuh  struct_Material.cuh  struct_Ray.cuh  struct_SVGFBuffers.cuh  struct_Texture.cuh  struct_Triangle.cuh  struct_Vec.cuh  struct_Xorshift.cuh  struct_stack.cuh  test.cuh
FileIO/: IO_load_WavefrontObj.cuh  IO_load_images.cuh  IO_save_png.cuh
external_lib/stb/: stb_image_write.h
external_lib/tinygltf-release/tinygltf-release/examples/common/: findOpenGLGlewGlut.lua
external_lib/tinygltf-release/tinygltf-release/examples/common/glm/doc/api/: a00024_source.html  a00048.html  a00048_source.html  a00200.html  dir_e8f3c1046ba4b357711397765359cd18.html  files.html
external_lib/tinyobjloader/experimental/: premake5.lua
external_lib/tinyobjloader/python/: README.md
